--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
+    "gulp-image-resize": "^0.13.1",
+    "gulp-imagemin": "^8.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "node-sass": "^8.0.0"
   },
   "dependencies": {
